force-app/main/default/objects/qsyd_FE__FileExplorerFolderTemplate__c/fields/qsyd_FE__Description__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__Description__c</fullName>
    <description>When, what and why you would use this template</description>
    <inlineHelpText>When, what and why you would use this template</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>