force-app/main/default/objects/qsyd_FE__FileExplorerFolderTemplate__c/fields/qsyd_FE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active folders are available for selection by users</description>
    <inlineHelpText>Active folders are available for selection by users</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>