force-app/main/default/objects/qsyd_FE__FileExplorerFolderTemplate__c/listViews/qsyd_FE__All.listView-meta.xml
<ListView>
    <fullName>qsyd_FE__All</fullName>
    <columns>NAME</columns>
    <columns>qsyd_FE__Label__c</columns>
    <columns>qsyd_FE__Description__c</columns>
    <columns>qsyd_FE__IsActive__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>